--- a/App/Rango.Common/Resources/Errors/Errors.pt-br.resx
+++ b/App/Rango.Common/Resources/Errors/Errors.pt-br.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AddressEmpty" xml:space="preserve">
+    <value>Informe um Endereço</value>
+  </data>
   <data name="EmailInvalid" xml:space="preserve">
     <value>Credenciais inválidas</value>
   </data>
@@ -126,10 +129,16 @@
   <data name="InvalidPasswordConfirmation" xml:space="preserve">
     <value>Confirmação de senha inválida</value>
   </data>
+  <data name="NomeInvalid" xml:space="preserve">
+    <value>Nome inválido</value>
+  </data>
   <data name="PasswordDoNotMatch" xml:space="preserve">
     <value>Senha incorreta</value>
   </data>
   <data name="PasswordIntervalCaractere" xml:space="preserve">
     <value>Senha deve conter de 8 à 20 caracteres</value>
+  </data>
+  <data name="UserEmpty" xml:space="preserve">
+    <value>Informe um Usuário</value>
   </data>
 </root>
