--- a/App/Rango.Common/Resources/Errors/Errors.resx
+++ b/App/Rango.Common/Resources/Errors/Errors.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AddressEmpty" xml:space="preserve">
+    <value>Enter an address</value>
+  </data>
   <data name="EmailInvalid" xml:space="preserve">
     <value>Credentials Invalid</value>
   </data>
@@ -126,10 +129,16 @@
   <data name="InvalidPasswordConfirmation" xml:space="preserve">
     <value>Invalid password confirmation</value>
   </data>
+  <data name="NomeInvalid" xml:space="preserve">
+    <value>Invalid Name</value>
+  </data>
   <data name="PasswordDoNotMatch" xml:space="preserve">
     <value>Incorrect password</value>
   </data>
   <data name="PasswordIntervalCaractere" xml:space="preserve">
     <value>Password must be 8 to 20 characters</value>
+  </data>
+  <data name="UserEmpty" xml:space="preserve">
+    <value>Enter a User</value>
   </data>
 </root>
